cleaning and added room photos

--- a/src/components/StepPreview/styles.module.scss
+++ b/src/components/StepPreview/styles.module.scss
@@ -3,7 +3,7 @@
 .step_preview_container {
     display: flex;
     text-align: left;
-    color: white;
+    color: black;
     font-family: 'Jura', sans-serif;
 }
 
@@ -29,7 +29,7 @@
 .step_preview_1 {
     padding: 5%;
     width: 15%;
-    background-color: #a3c585;
+    background-color: whitesmoke;
     font-family: 'Jura', sans-serif;
     display: flex;
     flex-direction: column;
@@ -39,7 +39,7 @@
 .step_preview_2 {
     padding: 5%;
     width: 15%;
-    background-color: #95bb72;
+    background-color: whitesmoke;
     font-family: 'Jura', sans-serif;
     display: flex;
     flex-direction: column;
@@ -49,7 +49,7 @@
 .step_preview_3 {
     padding: 5%;
     width: 15%;
-    background-color: #87ab69;
+    background-color: whitesmoke;
     font-family: 'Jura', sans-serif;
     display: flex;
     flex-direction: column;
@@ -59,7 +59,7 @@
 .step_preview_4 {
     padding: 5%;
     width: 15%;
-    background-color: #75975e;
+    background-color: whitesmoke;
     font-family: 'Jura', sans-serif;
     display: flex;
     flex-direction: column;
