--- a/pages/contact/styles.module.scss
+++ b/pages/contact/styles.module.scss
@@ -39,7 +39,7 @@
 }
 
 .topButton {
-    background: rgba(0, 128, 0, 0.6509803922);
+    background: #D48166;
     font-size: 25px;
     font-weight: 400;
     color: white;
