--- a/src/components/Contact/styles.module.scss
+++ b/src/components/Contact/styles.module.scss
@@ -79,7 +79,7 @@
     padding: 15px;
     border-radius: 12px;
     border: none;
-    background: rgba(0, 128, 0, 0.6509803922);
+    background: #D48166;
     color: white;
     font-size: 16px;
     cursor: pointer;
@@ -87,7 +87,7 @@
 }
 
 .submit_button:hover {
-    background-color: #26d635;
+    background-color: #D48166;
 }
 
 .error {
@@ -117,12 +117,12 @@
     text-align: left;
 
     a {
-        color: green;
+        color: #D48166;
         text-decoration: none;
     }
 
     a:hover {
-        color: #60be43;
+        color: #D48166;
     }
 
     @media (max-width: 610px) {
@@ -136,7 +136,7 @@
     font-family: 'Jura', sans-serif;
 
     svg {
-        color: green;
+        color: #D48166;
         cursor: pointer;
     }
 }
@@ -189,6 +189,6 @@
 }
 
 .submit_button:disabled {
-    background: rgb(0 128 0 / 39%);
+    background: #D48166;
     cursor: not-allowed;
   }
