--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -3,7 +3,7 @@
 .copy_right {
     font-family: 'Jura', sans-serif;
     padding: 2% 0% 2% 0%;
-    background-color: #75975e;
+    background-color: #D48166;
     color: white;
     font-size: 14px;
     display: flex;
@@ -34,9 +34,9 @@
     font-family: 'Jura', sans-serif;
     text-align: center;
     line-height: 35px;
-    color: green;
+    color: #D48166;
     a{
-        color: green;
+        color: #D48166;
         text-decoration: none;
     }
 }
@@ -49,7 +49,7 @@
     flex-direction: column;
 
     a {
-        color: green;
+        color: #D48166;
         text-decoration: none;
         text-align: center;
         line-height: 40px;
