--- a/src/components/SliderHomepage/styles.module.scss
+++ b/src/components/SliderHomepage/styles.module.scss
@@ -121,7 +121,7 @@
 .info_hr_slider_homepage {
     font-family: 'Jura', sans-serif;
     height: 10px;
-    background-color: green;
+    background-color: #D48166;
     border-radius: 10px;
     width: 80%;
     margin: auto;
