--- a/pages/Homepage/styles.module.scss
+++ b/pages/Homepage/styles.module.scss
@@ -42,7 +42,7 @@
 
   button {
     float: left;
-    background: rgba(0, 128, 0, 0.6509803922);
+    background: #D48166;
     color: white;
     padding: 20px 20px;
     border: none;
@@ -53,7 +53,7 @@
   }
 
   button:hover {
-    background-color: #26d635;
+    background-color: #D48166;
   }
 
   margin-bottom: 100px;
@@ -98,16 +98,16 @@
   font-display: swap;
 
   button:hover {
-    background-color: #26d635;
+    background-color: #D48166;
   }
 
   button {
-    background: #008000a6;
+    background: #D48166;
     border: none;
     padding: 14px 60px;
     font-size: 28px;
     border-radius: 12px;
-    color: white;
+    color: #373A36;
     cursor: pointer;
 
     @media (max-width: 768px) {
@@ -129,6 +129,7 @@
 }
 
 .subtitle_container {
+  color: #373A36;
   font-size: 90px;
   // display: flex;
   // flex-direction: column;
@@ -331,7 +332,7 @@
   margin: auto;
   border-radius: 12px;
   border: none;
-  background: rgba(0, 128, 0, 0.6509803922);
+  background: #D48166;
   color: white;
   margin-top: 20px;
   padding: 15px;
@@ -339,7 +340,7 @@
 }
 
 .send_button:hover {
-  background-color: #26d635;
+  background-color: #D48166;
 }
 
 .contact_form {
@@ -363,12 +364,12 @@
   text-align: left;
 
   a {
-    color: green;
+    color: #D48166;
     text-decoration: none;
   }
 
   a:hover {
-    color: #60be43;
+    color: #D48166;
   }
 
   @media (max-width: 610px) {
@@ -405,7 +406,7 @@
   font-family: "Jura", sans-serif;
   font-display: swap;
   height: 10px;
-  background-color: green;
+  background-color: #D48166;
   border-radius: 10px;
   width: 100%;
 }
@@ -481,7 +482,7 @@
   width: 100%;
 
   input[type="text"]:focus {
-    border: 3px solid rgb(20, 209, 92);
+    border: 3px solid #D48166;
   }
 
   @media (max-width: 610px) {
@@ -520,7 +521,7 @@
   }
 
   input[type="text"]:focus {
-    border: 3px solid rgb(0, 255, 55);
+    border: 3px solid #D48166;
   }
 }
 
@@ -548,13 +549,13 @@
   }
 
   a {
-    color: green;
+    color: #D48166;
     text-decoration: none;
     font-weight: bold;
   }
 
   a:hover {
-    color: #60be43;
+    color: #D48166;
     cursor: pointer;
   }
 }
@@ -566,7 +567,7 @@
   padding: 15px;
   border-radius: 12px;
   border: none;
-  background: rgba(0, 128, 0, 0.6509803922);
+  background: #D48166;
   color: white;
   font-size: 16px;
   cursor: pointer;
@@ -575,7 +576,7 @@
 }
 
 .submit_button:hover {
-  background-color: #26d635;
+  background-color: #D48166;
 }
 
 .submit_button:disabled {
