back to top color modified

--- a/src/components/BackToTopBtn/styles.module.scss
+++ b/src/components/BackToTopBtn/styles.module.scss
@@ -3,7 +3,7 @@
     height: 50px;
     border-radius: 100px;
     border: none;
-    background-color: #59ac59;
+    background-color: #D48166;
     color: white;
     font-size: 30px;
     display: flex;
