--- a/pages/despre-noi/styles.module.scss
+++ b/pages/despre-noi/styles.module.scss
@@ -174,45 +174,45 @@
     border-radius: 100px;
 }
 
-.status_metale_feroase {
-    font-family: 'Jura', sans-serif;
-    height: 50px;
-    width: 55%;
-    background-color: #D48166;
-    animation-name: feroase;
-    animation-duration: 1s;
-    border-radius: 100px;
-}
+// .status_metale_feroase {
+//     font-family: 'Jura', sans-serif;
+//     height: 50px;
+//     width: 55%;
+//     background-color: #D48166;
+//     animation-name: feroase;
+//     animation-duration: 1s;
+//     border-radius: 100px;
+// }
 
-.status_metale_neferoase {
-    font-family: 'Jura', sans-serif;
-    height: 50px;
-    width: 50%;
-    background-color: #D48166;
-    animation-name: neferoase;
-    animation-duration: 1s;
-    border-radius: 100px;
-}
+// .status_metale_neferoase {
+//     font-family: 'Jura', sans-serif;
+//     height: 50px;
+//     width: 50%;
+//     background-color: #D48166;
+//     animation-name: neferoase;
+//     animation-duration: 1s;
+//     border-radius: 100px;
+// }
 
-.status_hartie_carton {
-    font-family: 'Jura', sans-serif;
-    height: 50px;
-    width: 45%;
-    background-color: #D48166;
-    animation-name: hartieCarton;
-    animation-duration: 1s;
-    border-radius: 100px;
-}
+// .status_hartie_carton {
+//     font-family: 'Jura', sans-serif;
+//     height: 50px;
+//     width: 45%;
+//     background-color: #D48166;
+//     animation-name: hartieCarton;
+//     animation-duration: 1s;
+//     border-radius: 100px;
+// }
 
-.status_materie_organica {
-    font-family: 'Jura', sans-serif;
-    height: 50px;
-    width: 15%;
-    background-color: #D48166;
-    animation-name: organic;
-    animation-duration: 1s;
-    border-radius: 100px;
-}
+// .status_materie_organica {
+//     font-family: 'Jura', sans-serif;
+//     height: 50px;
+//     width: 15%;
+//     background-color: #D48166;
+//     animation-name: organic;
+//     animation-duration: 1s;
+//     border-radius: 100px;
+// }
 
 @keyframes organic {
     from {
@@ -274,7 +274,7 @@
 .info_hr {
     font-family: 'Jura', sans-serif;
     height: 10px;
-    background-color: #D48166;
+    background-color: #014085;
     border-radius: 10px;
     width: 100%;
 }
