--- a/pages/Homepage/styles.module.scss
+++ b/pages/Homepage/styles.module.scss
@@ -42,8 +42,8 @@
 
   button {
     float: left;
-    background: #D48166;
-    color: white;
+    background: #014085;
+    color: #f5ca40;
     padding: 20px 20px;
     border: none;
     border-radius: 12px;
@@ -53,7 +53,8 @@
   }
 
   button:hover {
-    background-color: #D48166;
+    background-color: #f5ca40;
+    color: #014085;
   }
 
   margin-bottom: 100px;
@@ -98,16 +99,17 @@
   font-display: swap;
 
   button:hover {
-    background-color: #D48166;
+    background-color: #f5ca40;
+    color:#014085;
   }
 
   button {
-    background: #D48166;
+    background: #014085;
     border: none;
     padding: 14px 60px;
     font-size: 28px;
     border-radius: 12px;
-    color: #373A36;
+    color: #f5ca40;
     cursor: pointer;
 
     @media (max-width: 768px) {
@@ -332,15 +334,16 @@
   margin: auto;
   border-radius: 12px;
   border: none;
-  background: #D48166;
-  color: white;
+  background: #014085;
+  color: #f5ca40;
   margin-top: 20px;
   padding: 15px;
   cursor: pointer;
 }
 
 .send_button:hover {
-  background-color: #D48166;
+  background-color: #f5ca40;
+  color:#014085  ;
 }
 
 .contact_form {
@@ -364,12 +367,14 @@
   text-align: left;
 
   a {
-    color: #D48166;
+    color: #014085;
     text-decoration: none;
   }
 
   a:hover {
-    color: #D48166;
+
+    background-color: #014085;
+    color: #f5ca40;
   }
 
   @media (max-width: 610px) {
@@ -406,7 +411,7 @@
   font-family: "Jura", sans-serif;
   font-display: swap;
   height: 10px;
-  background-color: #D48166;
+  background-color: #014085;
   border-radius: 10px;
   width: 100%;
 }
@@ -482,7 +487,7 @@
   width: 100%;
 
   input[type="text"]:focus {
-    border: 3px solid #D48166;
+    border: 3px solid #014085;
   }
 
   @media (max-width: 610px) {
@@ -521,7 +526,7 @@
   }
 
   input[type="text"]:focus {
-    border: 3px solid #D48166;
+    border: 3px solid #014085;
   }
 }
 
@@ -549,13 +554,14 @@
   }
 
   a {
-    color: #D48166;
+    color: #014085;
     text-decoration: none;
     font-weight: bold;
   }
 
   a:hover {
-    color: #D48166;
+    background-color: #f5ca40;
+    color: #014085;
     cursor: pointer;
   }
 }
@@ -567,8 +573,8 @@
   padding: 15px;
   border-radius: 12px;
   border: none;
-  background: #D48166;
-  color: white;
+  background: #014085;
+  color: #f5ca40;
   font-size: 16px;
   cursor: pointer;
   margin-top: 15px;
@@ -576,7 +582,8 @@
 }
 
 .submit_button:hover {
-  background-color: #D48166;
+  background-color: #f5ca40;
+  color: #014085;
 }
 
 .submit_button:disabled {
