--- a/src/components/BackToTopBtn/styles.module.scss
+++ b/src/components/BackToTopBtn/styles.module.scss
@@ -3,8 +3,8 @@
     height: 50px;
     border-radius: 100px;
     border: none;
-    background-color: #D48166;
-    color: white;
+    background-color: #014085;
+    color: #f2cb40;
     font-size: 30px;
     display: flex;
     align-content: center;
