--- a/src/components/Contact/styles.module.scss
+++ b/src/components/Contact/styles.module.scss
@@ -79,15 +79,16 @@
     padding: 15px;
     border-radius: 12px;
     border: none;
-    background: #D48166;
-    color: white;
+    background: #014085;
+    color:#f2cb40;
     font-size: 16px;
     cursor: pointer;
     margin-top: 15px;
 }
 
 .submit_button:hover {
-    background-color: #D48166;
+    background-color: #f2cb40;
+    color: #014085;
 }
 
 .error {
@@ -117,12 +118,12 @@
     text-align: left;
 
     a {
-        color: #D48166;
+        color: #014085;
         text-decoration: none;
     }
 
     a:hover {
-        color: #D48166;
+        color: #f2cb40;
     }
 
     @media (max-width: 610px) {
@@ -136,7 +137,7 @@
     font-family: 'Jura', sans-serif;
 
     svg {
-        color: #D48166;
+        color: #014085;
         cursor: pointer;
     }
 }
@@ -189,6 +190,6 @@
 }
 
 .submit_button:disabled {
-    background: #D48166;
+    background: red;
     cursor: not-allowed;
   }
