--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -3,8 +3,8 @@
 .copy_right {
     font-family: 'Jura', sans-serif;
     padding: 2% 0% 2% 0%;
-    background-color: #D48166;
-    color: white;
+    background-color: #014085;
+    color: #f2cb40;
     font-size: 14px;
     display: flex;
     align-items: center;
@@ -34,9 +34,9 @@
     font-family: 'Jura', sans-serif;
     text-align: center;
     line-height: 35px;
-    color: #D48166;
+    color: #014085;
     a{
-        color: #D48166;
+        color: #014085;
         text-decoration: none;
     }
 }
@@ -49,7 +49,7 @@
     flex-direction: column;
 
     a {
-        color: #D48166;
+        color: #014085;
         text-decoration: none;
         text-align: center;
         line-height: 40px;
